Add privileges - STILL MISSING NEW MAPPINGS FOR PRIVS